[gd_scene load_steps=17 format=3 uid="uid://druigsk56ejn1"]

[ext_resource type="Script" path="res://Stage1/stage1.gd" id="1_av5in"]
[ext_resource type="PackedScene" uid="uid://dlkq64kf8131e" path="res://HeartBar/HeartBar.tscn" id="2_7x46l"]
[ext_resource type="Script" path="res://Stage1/Score.gd" id="3_dqos8"]
[ext_resource type="PackedScene" uid="uid://dxfmjk3a1rfvo" path="res://UI/MobileInput/Joystick.tscn" id="4_207a8"]
[ext_resource type="PackedScene" uid="uid://bc41q2kltisn2" path="res://WinAndLose/game_over_screen.tscn" id="5_6x4eo"]
[ext_resource type="PackedScene" uid="uid://dgkbufrmqv0hd" path="res://WinAndLose/win_screen.tscn" id="6_34yk0"]
[ext_resource type="Texture2D" uid="uid://2jhk2dt0gv1l" path="res://Style/Images/BackGround/Saturno_fase1.png" id="7_g1w4r"]
[ext_resource type="PackedScene" uid="uid://dt724p02hihsy" path="res://Player/player.tscn" id="8_xvach"]
[ext_resource type="PackedScene" uid="uid://ij1a08e8l6oo" path="res://Wall/bullet_wall.tscn" id="9_2vdpo"]
[ext_resource type="PackedScene" uid="uid://cgfuo5bhdlnfh" path="res://Wall/player_wall.tscn" id="10_bqtpr"]
[ext_resource type="Script" path="res://Enemies/Enemy_Atirador/Path2D.gd" id="11_3jmbn"]
[ext_resource type="PackedScene" uid="uid://b3mrvwxi6oiyy" path="res://Enemies/Boss/path_boss_2d.tscn" id="12_q2nt3"]

[sub_resource type="LabelSettings" id="LabelSettings_1up5w"]

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_6muqy"]
scenes/2/scene = ExtResource("9_2vdpo")
scenes/3/scene = ExtResource("10_bqtpr")

[sub_resource type="TileSet" id="TileSet_ajpey"]
sources/0 = SubResource("TileSetScenesCollectionSource_6muqy")

[sub_resource type="Curve2D" id="Curve2D_aaem7"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 26, 60, 0, 0, 0, 0, 274, 56, 0, 0, 0, 0, 278, 107, 0, 0, 0, 0, 218, 82, 0, 0, 0, 0, 167, 102, 0, 0, 0, 0, 91, 81, 0, 0, 0, 0, 40, 101, 0, 0, 0, 0, 84, 141, 0, 0, 0, 0, 111, 167, 0, 0, 0, 0, 140, 131, 0, 0, 0, 0, 181, 164, 0, 0, 0, 0, 226, 132, 0, 0, 0, 0, 269, 162, 0, 0, 0, 0, 237, 208, 0, 0, 0, 0, 189, 207, 0, 0, 0, 0, 149, 189, 0, 0, 0, 0, 110, 216, 0, 0, 0, 0, 62, 187, 0, 0, 0, 0, 60, 250, 0, 0, 0, 0, 98, 288, 0, 0, 0, 0, 152, 243, 0, 0, 0, 0, 189, 274, 0, 0, 0, 0, 238, 243, 0, 0, 0, 0, 278, 282, 0, 0, 0, 0, 243, 338, 0, 0, 0, 0, 186, 336, 0, 0, 0, 0, 143, 309, 0, 0, 0, 0, 107, 349, 0, 0, 0, 0, 57, 308, 0, 0, 0, 0, 59, 376, 0, 0, 0, 0, 102, 401, 0, 0, 0, 0, 155, 381, 0, 0, 0, 0, 223, 397, 0, 0, 0, 0, 278, 370)
}
point_count = 34

[node name="Game2" type="Node2D" groups=["game"]]
script = ExtResource("1_av5in")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HeartBar" parent="CanvasLayer" instance=ExtResource("2_7x46l")]
offset_left = 1.0
offset_right = 153.0
offset_bottom = 48.0
scale = Vector2(0.60067, 0.673407)

[node name="Score" type="Label" parent="CanvasLayer" groups=["score"]]
offset_left = 208.0
offset_right = 256.0
offset_bottom = 26.0
scale = Vector2(1.18557, 0.780808)
text = "Score:00000"
label_settings = SubResource("LabelSettings_1up5w")
vertical_alignment = 1
script = ExtResource("3_dqos8")

[node name="JoystickBase" parent="CanvasLayer" instance=ExtResource("4_207a8")]
visible = false
position = Vector2(128, 448)
vanchor = 1

[node name="GameOverScreen" parent="CanvasLayer" instance=ExtResource("5_6x4eo")]
process_mode = 2
visible = false

[node name="WinScreen" parent="CanvasLayer" instance=ExtResource("6_34yk0")]
process_mode = 2
visible = false

[node name="Netuno" type="Sprite2D" parent="."]
texture = ExtResource("7_g1w4r")
centered = false

[node name="Player" parent="." groups=["player"] instance=ExtResource("8_xvach")]
position = Vector2(160, 608)
motion_mode = 1

[node name="TileMap" type="TileMap" parent="."]
visible = false
tile_set = SubResource("TileSet_ajpey")
format = 2
layer_0/tile_data = PackedInt32Array(1769472, 0, 196608, 1769473, 0, 196608, 1769474, 0, 196608, 1769475, 0, 196608, 1769476, 0, 196608, 1769477, 0, 196608, 1769478, 0, 196608, 1769479, 0, 196608, 1769480, 0, 196608, 1769481, 0, 196608, 1769482, 0, 196608, 1769483, 0, 196608, 1769484, 0, 196608, 1769485, 0, 196608, 1769486, 0, 196608, 1769487, 0, 196608, 1769488, 0, 196608, 1769489, 0, 196608, 1769490, 0, 196608, 1769491, 0, 196608, 2686975, 0, 131072, 2621439, 0, 131072, 2555903, 0, 131072, 2490367, 0, 131072, 2424831, 0, 131072, 2359295, 0, 131072, 2293759, 0, 131072, 2228223, 0, 131072, 2162687, 0, 131072, 2097151, 0, 131072, 2031615, 0, 131072, 1966079, 0, 131072, 1900543, 0, 131072, 1835007, 0, 131072, 1769471, 0, 131072, 1703935, 0, 131072, 1638399, 0, 131072, 1572863, 0, 131072, 1507327, 0, 131072, 1441791, 0, 131072, 1376255, 0, 131072, 1310719, 0, 131072, 1245183, 0, 131072, 1179647, 0, 131072, 1114111, 0, 131072, 1048575, 0, 131072, 983039, 0, 131072, 917503, 0, 131072, 851967, 0, 131072, 786431, 0, 131072, 720895, 0, 131072, 655359, 0, 131072, 589823, 0, 131072, 524287, 0, 131072, 458751, 0, 131072, 393215, 0, 131072, 327679, 0, 131072, 262143, 0, 131072, 196607, 0, 131072, 131071, 0, 131072, 65535, 0, 131072, -1, 0, 131072, -65516, 0, 131072, 20, 0, 131072, 65556, 0, 131072, 131092, 0, 131072, 196628, 0, 131072, 262164, 0, 131072, 327700, 0, 131072, 393236, 0, 131072, 458772, 0, 131072, 524308, 0, 131072, 589844, 0, 131072, 655380, 0, 131072, 720916, 0, 131072, 786452, 0, 131072, 851988, 0, 131072, 917524, 0, 131072, 983060, 0, 131072, 1048596, 0, 131072, 1114132, 0, 131072, 1179668, 0, 131072, 1245204, 0, 131072, 1310740, 0, 131072, 1376276, 0, 131072, 1441812, 0, 131072, 1507348, 0, 131072, 1572884, 0, 131072, 1638420, 0, 131072, 1703956, 0, 131072, 1769492, 0, 131072, 1835028, 0, 131072, 1900564, 0, 131072, 1966100, 0, 131072, 2031636, 0, 131072, 2097172, 0, 131072, 2162708, 0, 131072, 2228244, 0, 131072, 2293780, 0, 131072, 2359316, 0, 131072, 2424852, 0, 131072, 2490388, 0, 131072, 2555924, 0, 131072, 2621460, 0, 131072, 2621459, 0, 131072, 2621458, 0, 131072, 2621457, 0, 131072, 2621456, 0, 131072, 2621455, 0, 131072, 2621454, 0, 131072, 2621453, 0, 131072, 2621452, 0, 131072, 2621451, 0, 131072, 2621450, 0, 131072, 2621449, 0, 131072, 2621448, 0, 131072, 2621447, 0, 131072, 2621446, 0, 131072, 2621445, 0, 131072, 2621444, 0, 131072, 2621443, 0, 131072, 2621442, 0, 131072, 2621441, 0, 131072, 2621440, 0, 131072, -65537, 0, 131072, -131072, 0, 131072, -131071, 0, 131072, -131070, 0, 131072, -131069, 0, 131072, -131068, 0, 131072, -131067, 0, 131072, -131066, 0, 131072, -131065, 0, 131072, -131064, 0, 131072, -131063, 0, 131072, -131062, 0, 131072, -131061, 0, 131072, -131060, 0, 131072, -131059, 0, 131072, -131058, 0, 131072, -131057, 0, 131072, -131056, 0, 131072, -131055, 0, 131072, -131054, 0, 131072, -131053, 0, 131072, -131052, 0, 131072, 786462, 0, 196608)

[node name="PathAtirador2D" type="Path2D" parent="." groups=["path"]]
curve = SubResource("Curve2D_aaem7")
script = ExtResource("11_3jmbn")
health = 5

[node name="PathBoss2D" parent="." instance=ExtResource("12_q2nt3")]
